[gd_scene load_steps=5 format=3 uid="uid://c6fbusm8pft11"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_un0fq"]
[ext_resource type="Texture2D" uid="uid://4xfqh5ab1nqp" path="res://assets/board.png" id="2_o8k87"]
[ext_resource type="Texture2D" uid="uid://c38orgkaclkmq" path="res://assets/white1x1.png" id="3_mto2d"]

[sub_resource type="CanvasTexture" id="CanvasTexture_owi3e"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_un0fq")

[node name="Board" type="TextureRect" parent="."]
offset_left = 1.0
offset_top = -77.0
offset_right = 1921.0
offset_bottom = 1003.0
texture = ExtResource("2_o8k87")
expand_mode = 1

[node name="MenuBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = -45.0
offset_right = 41.0
offset_bottom = -5.0

[node name="NoTazmania" type="TextureRect" parent="MenuBar"]
modulate = Color(0.99, 0.96327, 0.9009, 1)
y_sort_enabled = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.924
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1693.0
offset_top = 944.04
offset_right = 1771.0
offset_bottom = 1007.04
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CanvasTexture_owi3e")
expand_mode = 1

[node name="MenuBarTexture" type="TextureRect" parent="MenuBar"]
modulate = Color(0.980392, 0.827451, 0.498039, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.924
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 959.04
offset_right = 1879.0
offset_bottom = 1127.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_mto2d")
expand_mode = 1

[node name="Container" type="HBoxContainer" parent="MenuBar"]
layout_mode = 0
offset_top = 996.0
offset_right = 1919.0
offset_bottom = 1126.0
alignment = 1

[node name="SpacerStart" type="Control" parent="MenuBar/Container"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2

[node name="TurnCountdown" type="Label" parent="MenuBar/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="StretchySpacer" type="Control" parent="MenuBar/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TurnTicker" type="Label" parent="MenuBar/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20

[node name="Button" type="Button" parent="MenuBar/Container"]
custom_minimum_size = Vector2(180, 70)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
text = "End Turn"

[node name="SpacerEnd" type="Control" parent="MenuBar/Container"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2

[node name="Tallies" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.763
anchor_right = 0.021
anchor_bottom = 0.805
offset_left = 1.0
offset_top = -77.04
offset_right = 0.679997
offset_bottom = -77.4001
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32

[node name="TurnTimer" type="Timer" parent="."]

[connection signal="pressed" from="MenuBar/Container/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
